Add some APIs that use the external assembly tables.
