# service/FamilyAssembliesService.js
@@ -1,5 +1,36 @@
 'use strict';
 
+const Sequelize = require("sequelize");
+const Op = Sequelize.Op;
+const conn = require("../databases.js").dfam;
+const getAssembly = require("../databases.js").getAssembly;
+const winston = require("winston");
+const zlib = require("zlib");
+
+const familyModel = require("../models/family.js")(conn, Sequelize);
+const familyAssemblyDataModel = require("../models/family_assembly_data.js")(conn, Sequelize);
+const assemblyModel = require("../models/assembly.js")(conn, Sequelize);
+const dfamTaxdbModel = require("../models/dfam_taxdb.js")(conn, Sequelize);
+const writer = require("../utils/writer.js");
+const mapFields = require("../utils/mapFields.js");
+
+familyAssemblyDataModel.belongsTo(familyModel, { foreignKey: 'family_id' });
+familyAssemblyDataModel.belongsTo(assemblyModel, { foreignKey: 'assembly_id' });
+assemblyModel.belongsTo(dfamTaxdbModel, { foreignKey: 'dfam_taxdb_tax_id' });
+
+const assemblyModels = {};
+function getAssemblyModels(schema_name) {
+  if (!assemblyModels[schema_name]) {
+    const models = assemblyModels[schema_name] = {};
+    const conn = models.conn = getAssembly(schema_name);
+    models.modelFileModel = require("../models/assembly/model_file.js")(conn, Sequelize);
+    models.karyotypeModel = require("../models/assembly/karyotype.js")(conn, Sequelize);
+    models.coverageDataModel = require("../models/assembly/coverage_data.js")(conn, Sequelize);
+    models.percentageIdModel = require("../models/assembly/percentage_id.js")(conn, Sequelize);
+  }
+
+  return assemblyModels[schema_name];
+}
 
 /**
  * Retrieve an individual Dfam family's list of linked annotated assemblies
@@ -8,8 +39,18 @@
  * no response value expected for this operation
  **/
 exports.readFamilyAssemblies = function(id) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+  return familyAssemblyDataModel.findAll({
+    include: [
+      { model: familyModel, where: { 'accession': id } },
+      { model: assemblyModel, include: [ dfamTaxdbModel ] },
+    ],
+  }).then(function(data) {
+    return data.map(function(family_assembly) {
+      return {
+        id: family_assembly.assembly.name,
+        name: family_assembly.assembly.dfamTaxdb.scientific_name,
+      };
+    });
   });
 }
 
@@ -22,8 +63,35 @@ exports.readFamilyAssemblies = function(id) {
  * no response value expected for this operation
  **/
 exports.readFamilyAssemblyAnnotationStats = function(id,assembly_id) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+  return familyAssemblyDataModel.findOne({
+    include: [
+      { model: familyModel, where: { 'accession': id } },
+      { model: assemblyModel, where: { 'name': assembly_id } },
+    ],
+  }).then(function(family_assembly) {
+    let obj = { };
+
+    if (family_assembly.hmm_GA_nrph_hit_count !== null) {
+      obj.hmm = {
+        divergence: family_assembly.hmm_genome_avg_kimura_div,
+        gathering_nonredundant: family_assembly.hmm_GA_nrph_hit_count,
+        gathering_all: family_assembly.hmm_GA_hit_count,
+        trusted_nonredundant: family_assembly.hmm_TC_nrph_hit_count,
+        trusted_all: family_assembly.hmm_TC_hit_count,
+      };
+    }
+
+    if (family_assembly.cons_GA_nrph_hit_count !== null) {
+      obj.cons = {
+        divergence: family_assembly.cons_genome_avg_kimura_div,
+        gathering_nonredundant: family_assembly.cons_GA_nrph_hit_count,
+        gathering_all: family_assembly.cons_GA_hit_count,
+        trusted_nonredundant: family_assembly.cons_TC_nrph_hit_count,
+        trusted_all: family_assembly.cons_TC_hit_count,
+      };
+    };
+
+    return obj;
   });
 }
 
@@ -37,8 +105,30 @@ exports.readFamilyAssemblyAnnotationStats = function(id,assembly_id) {
  * no response value expected for this operation
  **/
 exports.readFamilyAssemblyAnnotations = function(id,assembly_id,nrph) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+  return assemblyModel.findOne({
+    where: { 'name': assembly_id }
+  }).then(function(assembly) {
+    const models = getAssemblyModels(assembly.schema_name);
+
+    return models.modelFileModel.findOne({
+      where: { "model_accession": id }
+    }).then(function(files) {
+      var data;
+      if (nrph === true) {
+        data = files.nrph_hit_list;
+      } else  {
+        data = files.hit_list;
+      }
+
+      return new Promise(function(resolve, reject) {
+        zlib.gunzip(data, function(err, data) {
+          if (err) { reject(err); }
+          else { resolve(data); }
+        });
+      }).then(function(data) {
+        return { data, content_type: "text/plain" };
+      });
+    });
   });
 }
 
@@ -50,9 +140,33 @@ exports.readFamilyAssemblyAnnotations = function(id,assembly_id,nrph) {
  * assembly_id String The assembly name
  * no response value expected for this operation
  **/
-exports.readFamilyAssemblyKaryoImage = function(id,assembly_id) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+exports.readFamilyAssemblyKaryoImage = function(id,assembly_id,nrph,part) {
+  return assemblyModel.findOne({
+    where: { 'name': assembly_id }
+  }).then(function(assembly) {
+    const models = getAssemblyModels(assembly.schema_name);
+
+    return models.karyotypeModel.findOne({
+      where: { "model_accession": id }
+    }).then(function(karyotype) {
+      const parts = {
+        "heatmap": ["heatmap", "image/png"],
+        "html_map": ["html_map", "text/plain"],
+        "img_key": ["img_key", "text/plain"],
+      };
+
+      if (!parts[part]) {
+        return null;
+      }
+
+      var column = parts[part][0];
+
+      if (nrph === true) {
+        column = "nrph_" + column;
+      }
+
+      return { data: karyotype[column], content_type: parts[part][1] };
+    });
   });
 }
 
@@ -63,12 +177,61 @@ exports.readFamilyAssemblyKaryoImage = function(id,assembly_id) {
  * id String The Dfam family name
  * assembly_id String The assembly name
  * model String Model type, \"cons\" or \"hmm\"
- * threshold String Threshold, TODO enumerate or provide list of values
  * no response value expected for this operation
  **/
-exports.readFamilyAssemblyModelCoverage = function(id,assembly_id,model,threshold) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+exports.readFamilyAssemblyModelCoverage = function(id,assembly_id,model) {
+  return assemblyModel.findOne({
+    attributes: ["schema_name"],
+    where: { 'name': assembly_id }
+  }).then(function(assembly) {
+    const models = getAssemblyModels(assembly.schema_name);
+
+    return models.coverageDataModel.findOne({
+      attributes: [ "reversed", "forward", "nrph" ],
+      where: { "model_accession": id }
+    }).then(function(coverage) {
+      if (coverage) {
+        return {
+          "nrph": JSON.parse(coverage.nrph),
+          "all": JSON.parse(coverage.forward),
+          "false": JSON.parse(coverage.reversed),
+        };
+      } else {
+        return writer.respondWithCode(404, "");
+      }
+    });
+  });
+}
+
+/**
+ * Retrieve a family's conservation data for a given assembly
+ *
+ * id String The Dfam family name
+ * assembly_id String The assembly name
+ * model String Model type, \"cons\" or \"hmm\"
+ * no response value expected for this operation
+ **/
+exports.readFamilyAssemblyModelConservation = function(id,assembly_id,model) {
+  return assemblyModel.findOne({
+    attributes: ["schema_name"],
+    where: { 'name': assembly_id }
+  }).then(function(assembly) {
+    const models = getAssemblyModels(assembly.schema_name);
+
+    return models.percentageIdModel.findAll({
+      where: { "model_accession": id }
+    }).then(function(conservations) {
+      return conservations.map(function(cons) {
+        const obj = mapFields(cons, {}, {
+          "threshold": "threshold",
+          "max_insert": "max_insert",
+          "num_seqs": "num_seqs",
+        });
+        obj.graph = JSON.parse(cons.graph_json);
+
+        return obj;
+      });
+    });
   });
 }
 
